--- a/css/navigation.css
+++ b/css/navigation.css
@@ -2,19 +2,25 @@
 
 ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  margin: 0em;
+  padding: 0em;
   overflow: hidden;
-  background-color: #333333;
+  background-color: rgb(43, 45, 66);
 }
 
 li {
   float: left;
   border-style: solid;
   border-width: 6px;
+  border-right: none;
   text-align: center;
   font-family: "Fuzzy Bubbles", sans-serif;
   font-weight: 400;
+}
+
+#last {
+  border-right: solid;
+  border-width: 6px;
 }
 
 li a {
@@ -22,18 +28,15 @@ li a {
   text-align: center;
   padding: 16px;
   text-decoration: none;
-  color: white;
+  color: rgb(237, 242, 244);
+;
 }
 
 li a:hover {
-  background-color: #111111;
+  background-color:  rgb(117, 126, 147);
 }
 
 ul {
     list-style-type: none;
     margin: none;
-}
-
-li {
-    float: left;
 }
